# bazel-rust-mobile-demo

./: .bazelrc  AndroidMain.java  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  alloc.cc  allocator_shim.rs  android_link_hack.c  demo.rs  ios_main.m  jni_shim.c  main.c  platform_mappings  rules_rust.patch
.github/workflows/: ci.yml
tools/: bazel
